--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ Please use the table below for navigation.
 <br>
 <table>
   <tr>
-    <th>Room 1</th><th>Room 2</th><th>Room 3</th>
+    <th><a href="/room1/v1/">Room 1</a></th><th>Room 2</th><th>Room 3</th>
   </tr>
 </table>
