--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
-<h2>Welcome to the XR Museum</h2>
-<br>
-Please use the table below for navigation.
-<br>
-<table>
-  <tr>
-    <th><a href="/room1/v1/">Room 1</a></th><th>Room 2</th><th>Room 3</th>
-  </tr>
-</table>
+<html>
+  <body style="margin:0;">
+    <div id="top" style="width:100%;height:50%;">
+      <p style="position:absolute;bottom:0;text-align:center;">
+        <h2><Welcome to the XR Museum</h2>
+      </p>
+    </div>
+    <div id="bottom" style="width:100%;height:50%;">
+      <nav style="position:absolute;bottom:0;text-align:center;">
+        <ul>
+          <li><a href="/room1/v1/">Room 1</a></lih><li>Room 2</li><li>Room 3</li>
+        </ul>
+      </nav>
+    </div>
+  </body>
+</html>
