--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
   <body style="margin:0;">
-    <div id="top" style="width:100%;height:50%;">
-      <p style="position:absolute;bottom:0;text-align:center;">
+    <div id="top" style="width:100%;height:50%;position:relative;text-align:center;">
+      <p style="position:absolute;bottom:0;">
         <h2><Welcome to the XR Museum</h2>
       </p>
     </div>
-    <div id="bottom" style="width:100%;height:50%;">
-      <nav style="position:absolute;bottom:0;text-align:center;">
+    <div id="bottom" style="width:100%;height:50%;position:relative;text-align:center;">
+      <nav style="position:absolute;top:0;">
         <ul>
           <li><a href="/room1/v1/">Room 1</a></lih><li>Room 2</li><li>Room 3</li>
         </ul>
