--- a/index.html
+++ b/index.html
@@ -1,16 +1,70 @@
 <html>
-  <body style="margin:0;">
-    <div id="top" style="width:100%;height:50%;position:relative;text-align:center;">
-      <p style="position:absolute;bottom:0;">
-        <h2><Welcome to the XR Museum</h2>
-      </p>
+  <head>
+    <style>    
+      body {
+        margin:0;   
+        font-family:Arial;
+      }
+      a:hover {
+        text-decoration:underline;
+      }
+      a:visited {
+        color:white;
+      }
+      #top {
+        position:relative;
+        width:100%;
+        height:50%;
+        text-align:center;
+      }
+      #bottom {
+        text-align:center;
+        position:relative;
+        width:100%;
+        height:50%;
+        background-color:black;
+      }
+      #title {
+        bottom:0; 
+        display:inline-block;
+        margin:auto;
+        line-height:800px;
+      }
+      h2 {
+        font-size:56px;
+        display:inline;
+      }
+      #nav {
+        width:100%;
+        margin:auto;
+        top:0;
+        display:inline;
+      }
+      ul {
+        padding:0;
+        margin:0;
+        list-style: none;
+        color:white;
+        font-size:36px;
+      }
+      li {
+        float:left;
+        padding:30px;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="top">
+      <div id="title">
+        <h2>Welcome to the XR Museum</h2>
+      </div>
     </div>
-    <div id="bottom" style="width:100%;height:50%;position:relative;text-align:center;">
-      <nav style="position:absolute;top:0;">
+    <div id="bottom">
+      <div id="nav">
         <ul>
           <li><a href="/room1/v1/">Room 1</a></lih><li>Room 2</li><li>Room 3</li>
         </ul>
-      </nav>
+      </div>
     </div>
   </body>
 </html>
