--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <html>
   <head>
     <style>    
+
       body {
         margin:0;   
         font-family:Arial;
+      }
+      a {
+        width:100%;
+        height:100%;
       }
       a:hover {
         text-decoration:underline;
@@ -25,10 +30,9 @@
         background-color:black;
       }
       #title {
-        bottom:0; 
-        display:inline-block;
-        margin:auto;
-        line-height:800px;
+        bottom:25; 
+        position:absolute;
+        width:100%;
       }
       h2 {
         font-size:56px;
@@ -36,9 +40,8 @@
       }
       #nav {
         width:100%;
-        margin:auto;
         top:0;
-        display:inline;
+        position:absolute;
       }
       ul {
         padding:0;
@@ -46,11 +49,13 @@
         list-style: none;
         color:white;
         font-size:36px;
+        display:inline-block;
       }
       li {
         float:left;
         padding:30px;
       }
+
     </style>
   </head>
   <body>
