--- a/room1/postqual1.html
+++ b/room1/postqual1.html
@@ -1,3 +1,3 @@
 <h2>Thank you for completing Room 1!</h2>
 This will later be a survey page.<br/>
-<a href="/room2/v1/index.html">Click here to continue to Room 2.</a>
+<b>Please close this tab and return to the virtual museum.</b>
