--- a/room2/postqual2.html
+++ b/room2/postqual2.html
@@ -1,1 +1,4 @@
-
+<h2>Thank you for completing Room 2!</h2>
+This will later be a survey page.<br/>
+<b>Please close this tab and return to the virtual museum.</b>
+Almost done!
