--- a/room3/postqual3.html
+++ b/room3/postqual3.html
@@ -1,1 +1,3 @@
-
+<h2>Thank you for completing Room 3!</h2>
+This will later be a survey page.<br/>
+<b>You are finished! Thank you for your participation!</b>
