--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
         font-family:Arial;
       }
       a {
+        color:white;
         width:100%;
         height:100%;
+        text-decoration:none;
       }
       a:hover {
         text-decoration:underline;
