--- a/room1/v8/index.html
+++ b/room1/v8/index.html
@@ -12,9 +12,9 @@
       var unityInstance = UnityLoader.instantiate("unityContainer", "Build/v8.json", {onProgress: UnityProgress});
     </script>
   </head>
-  <body>
-    <div class="webgl-content">
-      <div id="unityContainer" style="width: 75%; height: 50%"></div>
+  <body style="width: 75%; height: 50%">
+    <div class="webgl-content" style="width: 75%; height: 50%">
+      <div id="unityContainer" style="width: 100%; height: 100%"></div>
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
