--- a/index.html
+++ b/index.html
@@ -63,13 +63,23 @@
   <body>
     <div id="top">
       <div id="title">
-        <h2>Welcome to the XR Museum</h2>
+        <h2>Welcome to the XR Museum</h2><br/>
+        <p>Welcome to the Virtual Tour of the Liberation War Museum of Bangladesh. The museum is located in the country’s capital, Dhaka, 
+          established in the year 1996 to commemorate the Bengali culture, heritage and its liberation movement towards the birth of a 
+          sovereign nation, from Pakistan.<br/>
+          There are three Rooms to visit on this tour.<br/>
+        </p>
+        <ul>
+          <li>Room 1: "History, Culture and Heritage of Bengal"</li>
+          <li>Room 2: "Beginning of a National Crisis"</li>
+          <li>Room 3: "The War and Victory of Bangladesh"</li>
+        </ul>
       </div>
     </div>
     <div id="bottom">
       <div id="nav">
         <ul>
-          <li><a href="/room1/v8/">Click here to enter Room 1</a></li>
+          <li><a href="/room1/v9/">Click here to enter Room 1</a></li>
         </ul>
       </div>
     </div>
