--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         top:0;
         position:absolute;
       }
-      ul {
+      #nav ul {
         padding:0;
         margin:0;
         list-style: none;
@@ -53,7 +53,7 @@
         font-size:36px;
         display:inline-block;
       }
-      li {
+      #nav li {
         float:left;
         padding:30px;
       }
