--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
       #title {
         bottom:25; 
         position:absolute;
-        width:100%;
+        width:50%;
+        margin:auto;
       }
       h2 {
         font-size:56px;
