--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <body>
     <div id="top">
       <div id="title">
-        <h2>Welcome to the XR Museum</h2><br/>
+        <h2>Welcome to the XR Liberation War Museum</h2><br/>
         <p>Welcome to the Virtual Tour of the Liberation War Museum of Bangladesh. The museum is located in the country’s capital, Dhaka, 
           established in the year 1996 to commemorate the Bengali culture, heritage and its liberation movement towards the birth of a 
           sovereign nation, from Pakistan.<br/>
