--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         position:relative;
         width:100%;
         height:50%;
-        text-align:center;
       }
       #bottom {
         text-align:center;
@@ -33,7 +32,7 @@
       }
       #title {
         bottom:25; 
-        position:absolute;
+        position:relative;
         width:50%;
         margin:auto;
       }
