--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         <p>Welcome to the Virtual Tour of the Liberation War Museum of Bangladesh. The museum is located in the country’s capital, Dhaka, 
           established in the year 1996 to commemorate the Bengali culture, heritage and its liberation movement towards the birth of a 
           sovereign nation, from Pakistan.<br/>
-          There are three Rooms to visit on this tour.<br/>
-        </p>
+          There are three Rooms to visit on this tour.
+        </p><br/>
         <ul>
           <li>Room 1: "History, Culture and Heritage of Bengal"</li>
           <li>Room 2: "Beginning of a National Crisis"</li>
