--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         position:relative;
         width:100%;
         height:50%;
+        display:flex;
+        flex-direction:column;
       }
       #bottom {
         text-align:center;
@@ -68,7 +70,7 @@
           established in the year 1996 to commemorate the Bengali culture, heritage and its liberation movement towards the birth of a 
           sovereign nation, from Pakistan.<br/>
           There are three Rooms to visit on this tour.
-        </p><br/>
+        </p><br/><br/>
         <ul>
           <li>Room 1: "History, Culture and Heritage of Bengal"</li>
           <li>Room 2: "Beginning of a National Crisis"</li>
