--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       h2 {
         font-size:56px;
         display:inline;
+        text-align:center;
       }
       #nav {
         width:100%;
